force-app/main/default/objects/Not_Working_Days__c/Not_Working_Days__c.object-meta.xml
<CustomObject>
    <description>User employee not working days (holiday, sick leave or other reason).</description>
    <label>Not Working Day</label>
    <nameField>
        <displayFormat>NWD-{0}</displayFormat>
        <label>NWD ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Not Working Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>