force-app/main/default/objects/Not_Working_Days__c/fields/Total_NWD__c.field-meta.xml
<CustomField>
    <fullName>Total_NWD__c</fullName>
    <label>Total NWD</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>